--- a/008_relative_vs_absolute/main.css
+++ b/008_relative_vs_absolute/main.css
@@ -1,5 +1,18 @@
-.borderimg1 {
-    border: 10px solid transparent;
-    padding: 15px;
-    border-image: url(border.png) 50 round;
+div{
+    width: 100px;
+    height: 100px;
+    border: 1px solid red;
+}
+
+img {
+    border: 10px groove orangered;
+
+}
+.dogone{
+    border: 10px dashed orangered;
+
+}
+.dogtwo{
+    border: 10px dotted orangered;
+
 }
